--- a/styles/global.css
+++ b/styles/global.css
@@ -25,12 +25,22 @@
   --font-subtitle: "Inconsolata", monospace;
   --font-text: "Maven Pro", sans-serif;
 
-  --title-lg: 56px/120% bold var(--font-title);
-  --title-md: 24px/120% bold var(--font-title);
-  --title-sm: 16px/120% bold var(--font-title);
+  --title-lg: bold 56px/120% var(--font-title);
+  --title-md: bold 24px/120% var(--font-title);
+  --title-sm: bold 16px/120% var(--font-title);
 
   --subtitle: 20px/120% var(--font-subtitle);
 
   --text-md: 16px/140% var(--font-text);
   --text-sm: 14px/140% var(--font-text);
+}
+
+body {
+  background-color: var(--gray-500);
+}
+
+.container {
+  max-width: 1366px;
+  width: 100%;
+  margin: auto;
 }
