--- a/styles/destaques.css
+++ b/styles/destaques.css
@@ -1,11 +1,12 @@
 .destaques {
   min-height: 917px;
+  padding-top: 72px;
 }
 
 .secondtittle {
   margin: auto;
   text-align: center;
-  padding: 72px 0 56px 0;
+  padding-bottom: 56px;
 
   p {
     color: var(--red);
@@ -42,7 +43,6 @@
   justify-content: center;
   align-items: start;
   height: 168px;
-  box-sizing: border-box;
 }
 
 .card-media img {
@@ -59,14 +59,7 @@
   gap: 8px;
 }
 
-.card-content h3 {
-  font: var(--title-sm);
-  color: var(--gray-100);
-  margin: 0;
-}
-
 .card-content p {
   font: var(--text-sm);
   color: var(--gray-300);
-  margin: 0;
 }
